# BitsDraw

./: .eslintrc.js  .gitignore  ARCHITECTURE_UNIFICATION_STRATEGY.md  CHANGELOG.md  CLAUDE.md  EXTENSION_GUIDE.md  LAYER_COMPOSITING_ANALYSIS.md  LICENSE  PHASE_5_SUMMARY.md  PHASE_6_COMPLETE.md  README-IMPLEMENTATION.md  README-NPM.md  README.md  REFACTOR.md  REFACTORING_PLAN.md  V1_5_SHEETS_DESIGN.md  V2_MULTIBIT_DESIGN.md  bitsdraw-complete-implementation-plan.md  build.sh  check-status.sh  index.html  layer_performance_analysis.js  main-original-backup.js  main-original.js  main-refactored.js  main-working.js  main.js  optimized_layer_compositing.js  package-lock.json  package.json  plan.md.bak  style-working.css  style.css  test-optimized.html  test.html  vite.config.js
docs/: index.html  style.css
src/: RefactorBridge.js  RefactorMonitor.js  main.js
tests/: test-runner.js
utils/: animationExporter.js  bitmap.js  canvas-unit.js  customFontManager.js  dialogManager.js  ditheringEffects.js  errorHandler.js  export.js  gifEncoder.js  iconData.js  iconGenerator.js  imageImport.js  imagePlacementDialog.js  menuManager.js  multilineTextRenderer.js  optimizedBitmap.js  patterns.js  textObjectManager.js  textRenderer.js  toolManager.js  windowManager.js
utils-backup/: dialogManager.js  ditheringEffects.js  iconData.js  imagePlacementDialog.js  menuManager.js  patterns.js  pngIconLoader.js  toolManager.js
utils-working/: alpha-renderer.js  export.js  iconLoader.js  imageImport.js  menuManager.js  optimizedBitmap.js
wasm-src/: Cargo.toml
wasm-src/src/: lib.rs
(+21 files in other folders)
