[package]
name = "bitsdraw-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
# Enable size optimizations
opt-level = "s"
lto = true
debug = false
panic = "abort"